
[package]
name = "plant-care-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
timer = "0.2.0"
chrono = "0.4.19"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
